# libstock-ffi

./: .gitignore  Cargo.toml  Makefile  README.md  rust-toolchain.toml
examples/: libstock.h  testcode.c
src/: errors.rs  fields.rs  lib.rs  serializer.rs  structure.rs
src/cpp/: libstock.h
src/fields/: exchange.rs  kline_indicators.rs  market_type.rs  message_type.rs  period.rs  price_data.rs  trade_side.rs
src/structure/: bbo.rs  funding_rate.rs  kline.rs  trade.rs
