[package]
name = "wmjtyd-libstock-ffi"
description = "The official foreign function interface (FFI) of libstock"
version = "0.1.0-dev"
edition = "2021"
readme = "README.md"
license-file = "LICENSE"

[lib]
crate-type = [
  "staticlib",  # Ensure it gets compiled as a (static) C library
  # "cdylib",     # If you want a shared/dynamic C library (advanced)
  "lib",        # For downstream Rust dependents: `examples/`, `tests/` etc.
]

[dependencies]
anyhow = { version = "1.0.63" }
log = "0.4.17"
safer-ffi = { version = "0.1.0", git = "https://github.com/getditto/safer_ffi.git", features = [
  "log",
], rev = "f69aeb1727bc2f2d68ea5de6bc887411bad12b0a" }
strum = { version = "0.24.1", features = ["derive"] }
wmjtyd-libstock = { git = "https://github.com/wmjtyd/libstock", branch = "develop", version = "0.4.0-pre.2" }

[features]
default = ["headers"]
headers = ["safer-ffi/headers", "safer-ffi/inventory-0-3-1"]

[[bin]]
name = "gen-header"
required-features = ["headers"]
